add scheduled build

--- a/.github/workflows/container-image.yml
+++ b/.github/workflows/container-image.yml
@@ -5,6 +5,11 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  schedule:
+    # sunday 04:05
+    - cron:  '5 4 * * 0'
+
+
 
 jobs:
 
