--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -1,15 +1,9 @@
-kind: pipeline
-name: default
-
-steps:
-- name: build dummy docker file and publish
-  image: plugins/docker
-  pull: never
-  settings:
-    repo: docker-registry2.napuu.xyz/bottitesti
-    tags: latest
-    secret: id=mysecret,src=secret-file
-    username:
-      from_secret: docker_username
-    password:
-      from_secret: docker_password
+pipeline:
+  build:
+    image: debian
+    commands:
+      - echo "This is the build step"
+  a-test-step:
+    image: debian
+    commands:
+      - echo "Testing.."
