--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -2,7 +2,7 @@ branches: main
 
 variables:
   - &file Containerfile
-  - &repo github.com/napuu/telegram-video-bot
+  - &repo docker-registry2.napuu.xyz/testings
 
 pipeline:
 
