--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -5,13 +5,11 @@ pipeline:
     image: plugins/docker
     settings:
       dockerfile: Containerfile
-      repo: docker-registry2.napuu.xyz/testings3
+      repo: docker-registryr.napuu.xyz/testings3
       tags: latest
       username: 
         from_secret: registry-user
       password:
         from_secret: registry-password
-      tags:
-      - latest
     when:
       event: push
