--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -5,7 +5,7 @@ pipeline:
     image: plugins/docker
     settings:
       dockerfile: Containerfile
-      repo: docker-registryr.napuu.xyz/testings3
+      repo: docker-registry2.napuu.xyz/testings3
       tags: latest
       username: 
         from_secret: registry-user
