--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -4,7 +4,7 @@ pipeline:
     settings:
       dockerfile: Containerfile
       platforms: linux/amd64
-      repo: registry-internal.default.svc.cluster.local/testings3
+      repo: http://registry-internal.default.svc.cluster.local/testings3
       insecure: true
       registry:
         from_secret: registry-host
