--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -4,8 +4,9 @@ pipeline:
     settings:
       dockerfile: Containerfile
       platforms: linux/amd64
-      repo: http://registry-internal.default.svc.cluster.local/testings3
-      insecure: true
+      repo: registry-internal.default.svc.cluster.local/testings3
+      daemon:
+        insecure: true
       registry:
         from_secret: registry-host
       tags: latest
