--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -4,9 +4,7 @@ pipeline:
     settings:
       dockerfile: Containerfile
       platforms: linux/amd64
-      repo: registry-internal.default.svc.cluster.local/testings3
-      daemon:
-        insecure: true
+      repo: docker-registry4.napuu.xyz/testings3
       registry:
         from_secret: registry-host
       tags: latest
