--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -19,11 +19,11 @@ pipeline:
     image: appleboy/drone-ssh
     settings:
       host:
-        from_secret: server_host
+        from_secret: server-host
       username:
-        from_secret: server_user
+        from_secret: server-user
       key:
-        from_secret: server_key
+        from_secret: server-key
       port: 22
       command_timeout: 2m
       script:
