--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -4,14 +4,15 @@ pipeline:
     settings:
       dockerfile: Containerfile
       platforms: linux/amd64
-      repo: docker-registry4.napuu.xyz/tgvideobot2
+      repo:
+        from_secret: TARGET_REPOSITORY
       registry:
-        from_secret: registry-host
+        from_secret: REGISTRY_HOST
       tags: latest
       username: 
-        from_secret: registry-user
+        from_secret: REGISTRY_USER
       password:
-        from_secret: registry-password
+        from_secret: REGISTRY_PASSWORD
     when:
       event: push
 
@@ -19,15 +20,15 @@ pipeline:
     image: appleboy/drone-ssh
     settings:
       host:
-        from_secret: server-host
+        from_secret: SERVER_HOST
       username:
-        from_secret: server-user
+        from_secret: SERVER_USER
       key:
-        from_secret: server-key
+        from_secret: SERVER_KEY
       port: 22
       command_timeout: 2m
       script:
-        - /usr/local/bin/kubectl rollout restart deployment tgvideobot2
+        from_secret: SERVER_DEPLOY_CMD
     when:
       event: push
 
