--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -19,16 +19,13 @@ pipeline:
   depl:
     image: appleboy/drone-ssh
     settings:
-      host:
-        from_secret: SERVER_HOST
-      username:
-        from_secret: SERVER_USER
-      key:
-        from_secret: SERVER_KEY
+      host: ${SERVER_HOST}
+      username: ${SERVER_USER}
+      key: ${SERVER_KEY}
       port: 22
       command_timeout: 2m
       script:
-        from_secret: SERVER_DEPLOY_CMD
+        - ${SERVER_DEPLOY_CMD}
     when:
       event: push
 
