--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -19,13 +19,15 @@ pipeline:
   depl:
     image: appleboy/drone-ssh
     settings:
-      host: ${SERVER_HOST}
-      username: ${SERVER_USER}
-      key: ${SERVER_KEY}
+      host: SERVER_HOST
+      username:
+        from_secret: SERVER_USER
+      key:
+        from_secret: SERVER_KEY
       port: 22
       command_timeout: 2m
       script:
-        - ${SERVER_DEPLOY_CMD}
+        from_secret: SERVER_DEPLOY_CMD
     when:
       event: push
 
