--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -19,15 +19,16 @@ pipeline:
   depl:
     image: appleboy/drone-ssh
     settings:
-      host: SERVER_HOST
+      host:
+        from_secret: PROD_SERVER_HOST
       username:
-        from_secret: SERVER_USER
+        from_secret: PROD-SERVER_USER
       key:
-        from_secret: SERVER_KEY
+        from_secret: PROD_SERVER_KEY
       port: 22
       command_timeout: 2m
       script:
-        from_secret: SERVER_DEPLOY_CMD
+        from_secret: PROD_SERVER_DEPLOY_CMD
     when:
       event: push
 
