--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -28,7 +28,7 @@ pipeline:
       port: 22
       command_timeout: 2m
       script:
-        from_secret: PROD_SERVER_DEPLOY_CMD
+        - ${PROD_SERVER_DEPLOY_CMD}
     when:
       event: push
 
