--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -26,11 +26,8 @@ pipeline:
       key:
         from_secret: PROD_SERVER_KEY
       port: 22
-      command_timeout: 2m
-      envs:
-        - PROD_SERVER_DEPLOY_CMD
       script:
-        - sh -c "$$PROD_SERVER_DEPLOY_CMD"
+        from_secret: DEPLOYMENT_NAME
     when:
       event: push
 
